--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./My folder/resume.pdf')"
+            onclick="window.open('./My folder/Devesh_Mhaisne_cv.pdf')"
           >
             Download CV
           </button>
@@ -288,7 +288,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Newspaper</h2>
+            <h2 class="experience-sub-title project-title">NewsMonkey</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -316,7 +316,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/DeveshMhaisne/Spotify-Front-end'"
+                onclick="location.href=''"
               >
                 Github
               </button>
