--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/DeveshMhaisne/Spotify-Front-end'"
               >
                 Live Demo
               </button>
