--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href=''"
+                onclick="location.href='https://github.com/DeveshMhaisne/Spotify-Front-end'"
               >
                 Github
               </button>
